--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -436,6 +436,8 @@
       <DependentUpon>TestMain.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="OpenTK.dll.config" />
+    <EmbeddedResource Include="Orrery\TestFiles\SimpleSystem1.json" />
+    <EmbeddedResource Include="Orrery\TestFiles\HIP 22566.json" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -726,6 +728,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Rings_1_rocky.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\HMCv37.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
