--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -438,6 +438,7 @@
     <None Include="OpenTK.dll.config" />
     <EmbeddedResource Include="Orrery\TestFiles\SimpleSystem1.json" />
     <EmbeddedResource Include="Orrery\TestFiles\HIP 22566.json" />
+    <EmbeddedResource Include="Orrery\TestFiles\HIP 21918.json" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
