Add new sunsurface shaders and vertex autoscalers, remove newtsoftsoft crap, update test star disc demo
Add new bitmap helpers for crop image
Add GLPLFragmentShaderTexture2DWSelector
Add GLPLFragmentShaderTexture2DWSelectorSunspot
Add GLPLVertexShaderModelWorldTextureAutoScale
Remove newtonsoft crap
Update TestStarDiscs

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -33,14 +33,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="OpenTK, Version=3.3.2.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
       <HintPath>..\packages\OpenTK.3.3.2\lib\net20\OpenTK.dll</HintPath>
     </Reference>
     <Reference Include="OpenTK.GLControl, Version=3.1.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
       <HintPath>..\packages\OpenTK.GLControl.3.1.0\lib\net20\OpenTK.GLControl.dll</HintPath>
+    </Reference>
+    <Reference Include="QuickJSON, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RJKJSoft.QuickJSON.1.3.0\lib\net48\QuickJSON.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -183,7 +183,6 @@
     <Compile Include="FrameBuffer\TestFrameBuffer.designer.cs">
       <DependentUpon>TestFrameBuffer.cs</DependentUpon>
     </Compile>
-    <Compile Include="BaseUtils\Jsonext.cs" />
     <Compile Include="Geometry\ShaderTestGeoFind.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -720,6 +719,20 @@
   <ItemGroup>
     <None Include="Resources\star_grey64.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\O.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\A.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\F.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\G.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\N.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
