New GLBinlessBitmaps, fixes to focusing controls, General debug of controls
Add GLBindlessBitmaps as an alternative to the 2DTextureArray GLBitmaps
Add Modal Forms to window control so you can turn off all other controls except the form
Add new vector2/3/4 parse/tostring/invariant
Rename to IsContextCurrent in window control
Add idea of IsContainer to indicate control holds other controls
Find next tab child now looks into children so works thru containers
GLCheckBox warns if you are using the button theme and you did not set the backcolour. Added constructor args for that
Focus box works in GLCheckBox button theme
Add SetFocusOnClick to button derived items, calendar, trackbar, updown
Remove Button Return callback - just use Click
Controls with sub controls - ensure the EnableThemer is off on those subcontrols.
Form can control margin/padding/border width on constructor
Form supports modal windows and child focus remembers and returned correctly even in containers of the form
Scrollpanel - fixed the scrollRange so can't return < 0
ScrollpanelScrollBar - added new position setters. Added BackColor, Add Remove() items from scroll panel. Fixed scroll range computation
MultiLineTextBox - you always have 1 line, even if there is not enough displayable lines, stop crashing
Autocomplete is based off GLTextBox. Autocomplete cancels results if return is pressed or focus lost, and not present results
Added GLPLFragmentShaderTextureBindlessIndexed
Added cull distance to GLPLVertexShaderModelWorldTextureAutoScale
Add WriteHandle at position to BindlessTextureBlock
Add Bitmap Bindless Texture test

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -22,6 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -31,6 +32,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="OpenTK, Version=3.3.2.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
@@ -59,6 +61,12 @@
     <Compile Include="BaseUtils\CommandArgs.cs" />
     <Compile Include="BaseUtils\StringObjectExtensions.cs" />
     <Compile Include="BaseUtils\xml.cs" />
+    <Compile Include="BitMaps\TestBindlessBitmaps.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="BitMaps\TestBindlessBitmaps.designer.cs">
+      <DependentUpon>TestBindlessBitmaps.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrameBuffer\TestRenderBuffer.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -84,6 +92,7 @@
       <DependentUpon>TestGalaxyDemo2.cs</DependentUpon>
     </Compile>
     <Compile Include="Galaxy\Bookmarks.cs" />
+    <Compile Include="Galaxy\Images.cs" />
     <Compile Include="Galaxy\GalaxyStars.cs" />
     <Compile Include="Galaxy\GalMapObjects.cs" />
     <Compile Include="Galaxy\GalMapRegions.cs" />
@@ -353,6 +362,9 @@
     <Compile Include="Volumetrics\ShaderTestVolumetricNoise.designer.cs">
       <DependentUpon>ShaderTestVolumetricNoise.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="BitMaps\TestBindlessBitmaps.resx">
+      <DependentUpon>TestBindlessBitmaps.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrameBuffer\TestRenderBuffer.resx">
       <DependentUpon>TestRenderBuffer.cs</DependentUpon>
     </EmbeddedResource>
