--- a/OFC/OFC.csproj
+++ b/OFC/OFC.csproj
@@ -79,6 +79,7 @@
     <Compile Include="GL4\BasicTypes\GLTransformFeedback.cs" />
     <Compile Include="GL4\BasicTypes\GLStencil.cs" />
     <Compile Include="GL4\BasicTypes\GLScissors.cs" />
+    <Compile Include="GL4\BitMaps\GLBindlessBitmaps.cs" />
     <Compile Include="GL4\Buffers\GLSetOfObjectsWithLabels.cs" />
     <Compile Include="GL4\Buffers\GLVertexBufferIndirect.cs" />
     <Compile Include="GL4\Buffers\GLObjectsWithLabels.cs" />
