Controls improvement, Matrix shaders refactored
Add two Draw/Fill Rectangle from area
Change Matrix buffer shaders to use the GLStaticsMatrix4 viewing and fading matrix makers, remove them from the shaders.  Change the meaning of fade pos/fade scaler so we can do this and also just direct alpha shading (scaler=0 pos=fade). Affects shaders VertexQuadsMatrix and VertexTriStripMatrix

Controls
Add owner field to control, taken in account if deciding a control is a child of a tree.
Theming is not done if any parent up the tree is not themed.
Default color for mouse down made darker
Drawing for button, checkbox made better to let the focus rectangle show
Checkbox rewrote paint and double checked various modes
better naming of sub controls of a control
tooltip ensures its on screen
FindNextTabChild call simplified to remove int.Maxvalue
Added Show (modal) to form message box
Add FormVector3
Panel constructors aligned
Textbox we calculate line height on control add as the font can change due to the add
Numberbox we add NumberStyles to allow better decoding of parse and thousands seperator
Autocomplet add listbox.Owner so the modal system knows it belongs

Tests
TestControlForms refactored to be cleaner
Added TestBox2 test
Added tooltip test
Demo for galaxy map image lists

--- a/OFC/OFC.csproj
+++ b/OFC/OFC.csproj
@@ -121,6 +121,7 @@
     <Compile Include="GL4\Controls\DGV\DataGridViewTopLeftPanel.cs" />
     <Compile Include="GL4\Controls\Forms\Form.cs" />
     <Compile Include="GL4\Controls\Forms\FormConfigurable.cs" />
+    <Compile Include="GL4\Controls\Forms\FormVector3.cs" />
     <Compile Include="GL4\Controls\Forms\FormMessageBox.cs" />
     <Compile Include="GL4\Controls\Menus\ControlMenuItem.cs" />
     <Compile Include="GL4\Controls\Menus\ControlMenuStrip.cs" />
