--- a/TestControls/TestControls.csproj
+++ b/TestControls/TestControls.csproj
@@ -83,11 +83,23 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TextBox\TestControlsTextBox2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TextBox\TestControlsTextBox2.designer.cs">
+      <DependentUpon>TestControlsTextBox2.cs</DependentUpon>
+    </Compile>
     <Compile Include="TextBox\TestControlsTextBox.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="TextBox\TestControlsTextBox.designer.cs">
       <DependentUpon>TestControlsTextBox.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ToolTip\TestControlsToolTip.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ToolTip\TestControlsToolTip.designer.cs">
+      <DependentUpon>TestControlsToolTip.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Basic\TestControlsBasic.resx">
       <SubType>Designer</SubType>
@@ -114,8 +126,14 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="TextBox\TestControlsTextBox2.resx">
+      <DependentUpon>TestControlsTextBox2.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="TextBox\TestControlsTextBox.resx">
       <DependentUpon>TestControlsTextBox.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ToolTip\TestControlsToolTip.resx">
+      <DependentUpon>TestControlsToolTip.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="OpenTK.dll.config" />
     <None Include="packages.config" />
