--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -42,11 +42,13 @@
       <HintPath>..\packages\OpenTK.GLControl.3.1.0\lib\net20\OpenTK.GLControl.dll</HintPath>
     </Reference>
     <Reference Include="QuickJSON, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\RJKJSoft.QuickJSON.1.3.0\lib\net48\QuickJSON.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\QuickJSON\QuickJSON\bin\Release\net48\QuickJSON.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Management" />
+    <Reference Include="System.Web.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -59,6 +61,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseUtils\CommandArgs.cs" />
+    <Compile Include="BaseUtils\FileHelpers.cs" />
+    <Compile Include="BaseUtils\HttpCom.cs" />
+    <Compile Include="BaseUtils\HttpDownloadFile.cs" />
+    <Compile Include="BaseUtils\NumberObjectExtensions.cs" />
+    <Compile Include="BaseUtils\ResponseData.cs" />
     <Compile Include="BaseUtils\StringObjectExtensions.cs" />
     <Compile Include="BaseUtils\xml.cs" />
     <Compile Include="BitMaps\TestBindlessBitmaps.cs">
@@ -92,7 +99,7 @@
       <DependentUpon>TestGalaxyDemo2.cs</DependentUpon>
     </Compile>
     <Compile Include="Galaxy\Bookmarks.cs" />
-    <Compile Include="Galaxy\Images.cs" />
+    <Compile Include="BaseUtils\ImageCache.cs" />
     <Compile Include="Galaxy\GalaxyStars.cs" />
     <Compile Include="Galaxy\GalMapObjects.cs" />
     <Compile Include="Galaxy\GalMapRegions.cs" />
