--- a/TestControls/TestControls.csproj
+++ b/TestControls/TestControls.csproj
@@ -159,7 +159,9 @@
   <ItemGroup>
     <None Include="Resources\ImportSphere.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\Rotate.png" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="Resources\GoBackward.png" />
   </ItemGroup>
