--- a/Tests/packages.config
+++ b/Tests/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="OpenTK" version="3.3.2" targetFramework="net46" />
   <package id="OpenTK.GLControl" version="3.1.0" targetFramework="net46" />
+  <package id="RJKJSoft.QuickJSON" version="1.4.0" targetFramework="net48" />
 </packages>
