--- a/TestControls/TestControls.csproj
+++ b/TestControls/TestControls.csproj
@@ -83,6 +83,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TextBox\TestControlsAutoComplete.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TextBox\TestControlsAutoComplete.designer.cs">
+      <DependentUpon>TestControlsAutoComplete.cs</DependentUpon>
+    </Compile>
     <Compile Include="TextBox\TestControlsTextBox2.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -126,6 +132,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="TextBox\TestControlsAutoComplete.resx">
+      <DependentUpon>TestControlsAutoComplete.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="TextBox\TestControlsTextBox2.resx">
       <DependentUpon>TestControlsTextBox2.cs</DependentUpon>
     </EmbeddedResource>
