Fix issues with TextBoxAutoCorrect, modal forms and detached controls
Detached controls were not working in modal forms - scroll bar for instance. Enhance IsThisOrChildOf to detect the owner link up the parent chain
Combobox had an error with drop down - need to detach the control not remove it.
Added to image controls the ImageFixedSize - stretch to this size.
Control list box to fix issue with scroll bar location - need to set size then do recursive layout
Multiline box supports now forced lineheight - when set, that that
Autocomplet end button now acts as drop down, drop up and wait button

remove debug statements

--- a/OFC/OFC.csproj
+++ b/OFC/OFC.csproj
@@ -281,6 +281,12 @@
   <ItemGroup>
     <None Include="Resources\Wait.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ArrowDown.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ArrowUp.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\DefaultDocumentation.0.7.9\build\DefaultDocumentation.targets" Condition="Exists('..\packages\DefaultDocumentation.0.7.9\build\DefaultDocumentation.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
